...
    internal static let title = L10n.tr("Localizable", "history.title", fallback: "History")
    /// View All History
    internal static let viewAll = L10n.tr("Localizable", "history.viewAll", fallback: "View All History")
  }
  internal enum Navigation {
    /// Add
    internal static let add = L10n.tr("Localizable", "navigation.add", fallback: "Add")
    /// Add Device
    internal static let addDevice = L10n.tr("Localizable", "navigation.addDevice", fallback: "Add Device")
    /// Add Device Details
    internal static let addDeviceDetails = L10n.tr("Localizable", "navigation.addDeviceDetails", fallback: "Add Device Details")
    /// Debug Tools
    internal static let debugTools = L10n.tr("Localizable", "navigation.debugTools", fallback: "Debug Tools")
    /// Main Navigation
    internal static let menu = L10n.tr("Localizable", "navigation.menu", fallback: "Menu")
    /// Overview
    internal static let overview = L10n.tr("Localizable", "navigation.overview", fallback: "Overview")
    /// Select Flower
    internal static let selectFlower = L10n.tr("Localizable", "navigation.selectFlower", fallback: "Select Flower")
    /// Settings
    internal static let settings = L10n.tr("Localizable", "navigation.settings", fallback: "Settings")
  }
  internal enum Notification {
    /// Notifications
    internal static let debugTest = L10n.tr("Localizable", "notification.debugTest", fallback: "🧪 Debug: Test Notifications")
    /// Pending: 
    internal static let pending = L10n.tr("Localizable", "notification.pending", fallback: "Pending: ")
...
    internal static let getStarted = L10n.tr("Localizable", "onboarding.getStarted", fallback: "To get started, please add a new device.")
    /// Onboarding
    internal static let welcome = L10n.tr("Localizable", "onboarding.welcome", fallback: "Welcome to Vattna")
  }
  internal enum Plant {
    /// Plant Selection
    internal static let addFlower = L10n.tr("Localizable", "plant.addFlower", fallback: "Add Flower")
    /// Values automatically set from selected plant
    internal static let autoValues = L10n.tr("Localizable", "plant.autoValues", fallback: "Values automatically set from selected plant")
    /// Change
    internal static let change = L10n.tr("Localizable", "plant.change", fallback: "Change")
    /// Currently Selected:
    internal static let currentlySelected = L10n.tr("Localizable", "plant.currentlySelected", fallback: "Currently Selected:")
...
