...
                }
            }
            .padding(.bottom, 20)
        }
        .background(Color(.systemGroupedBackground))
        .navigationBarTitleDisplayMode(.inline)
        .accessibilityIdentifier("deviceDetailScreen")
        .onAppear {
            self.viewModel.loadDetails()
            
            Task {
                await refreshPrediction()
            }
...
